syntax = "proto3";

option java_package="dev.mrpato.grpc.example.proto";
option java_outer_classname="RickMortyServiceProto";

import "character.proto";
import "google/protobuf/empty.proto";

service RickMortyService {
  rpc GetAllCharacters(google.protobuf.Empty) returns (Characters) {}
  rpc GetCharacter(GetCharacterRequest) returns (Character) {}
  rpc VoteCharacter(VoteCharacterRequest) returns (VoteCharacterResponse) {}
}

message VoteCharacterRequest {
  int64 characterId = 1;
}

message VoteCharacterResponse {
  bool result = 1;
}

message GetCharacterRequest {
  int64 characterId = 1;
}
